# TTE

./: .gitignore  .pre-commit-config.yaml  README.md  import_TinyTTAEngine_inference.sh
TinyTTAEngine/tensorflow/lite/micro/cortex_m_generic/: micro_time.cc
include/: utils.cpp
tutorials/inference/: .mbed  CMakeLists.txt  README.md  main.cpp  main_functions.cpp  main_functions.h
